# aligement

./: README.md
align/: CMakeLists.txt  align.cpp
loop2/: readme.txt
